
package org.springmodules.validation.util
* Moved ContextAware to org.springmodules.validation.util.context
* Moved BasicContextAware to org.springmodules.validation.util.context

package org.springmodules.validation.bean
* Added the bean validation framework

package org.springmodules.samples.validation.bean
* Added a sample application for the new bean validation framework


Changes in version 0.5 (14.07.2006)
-----------------------------------
Package org.springmodules.bpm.flux
* Added XML Engine bean.

Package org.springmodules.cache
* Patched the module to work with Spring post 2.0-m3. Many thanks to Craig Walls for submitting the patch.

Package org.springmodules.cache.provider.gigaspaces
* GigaSpaces caching support

Package org.springmodules.jcr
* Updated docs and the sample [JIRA MOD-160]

Package org.springmodules.jcr.jackrabbit
* Added TransientRepositoryFactoryBean

Package org.springmodules.scheduling.flux
* Added XML Engine bean.

Package org.springmodules.workflow.flux
* Added XML Engine bean.

Package org.springmodules.workflow.jbpm31
* Updated docs regarding ProcessDefinitionFB [JIRA MOD-135]

Package org.springmodules.workflow.osworkflow
* Added reference documentation [JIRA MOD-158]
* Upgraded Acegi to 1.0.1 version [JIRA MOD-65]. Thanks go to Stefan Kleineikenscheidt for helping out.

Package org.springmodules.validation.valang
* Removed deprecated ValangValidationFactoryBean class

Package org.springmodules.validation.valang.parser
* Fixed the valang.jj to support direct list/array elements using the BeanWrapper notation (e.g. tags[0])

Package org.springmodules.xt
* New top-level module added. Spring XT (http://springxt.sourceforge.net) is now part of the Spring Modules project.

Changes in version 0.4 (10.06.2006)
-----------------------------------

Added docbook documentation for validation module

Package org.springmodules.javaspaces
* New Javaspaces module
* Added usage documentation

Package org.springmodules.jbpm30